--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -230,9 +230,17 @@ body.dark .characters-card {
 
 /* ERROR 404 */
 .error404 {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  border: 1px solid red;
+  height: calc(100vh - 100px);
 }
+
+/* .error404-container {
+  width: 100%;
+  height: 100%;
+} */
 
 body.dark .error404{
   color: #FFF;
@@ -240,10 +248,11 @@ body.dark .error404{
 
 .error404 img {
   max-width: 100%;
+  margin: 0 auto;
 }
 
 .error404 h2 {
-  padding: 1em 0;
+  padding-top: 2em;
   text-align: center;
 }
 
